Revision history for Catalyst-View-ByCode

0.03    2009-07-18
        * expanded markup syntax by using some Devel::Declare tricks
        * corrected dependencies in Build.PL

0.02    2009-04-26
        added C::Helper::View::ByCode to allow create-script to work.

0.01    2009-04-25
        First version, released on an unsuspecting world.
