@@ -1,12 +1,18 @@
 package Catalyst::View::ByCode::Markup::Element::Structured;
 use Moose;
+use MooseX::AttributeHelpers;
 extends 'Catalyst::View::ByCode::Markup::Element';
 
 has content => (
+    metaclass => 'Collection::Array',
     is => 'rw',
     isa => 'ArrayRef[Object]',
     lazy => 1,
     default => sub { [] },
+    provides => {
+        push => 'add_content',
+        empty => 'has_content',
+    },
 );
 
 override as_text => sub {
